--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,16 @@
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "storage-utils.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ],
   "action": {
     "default_icon": {
       "16": "icons/icon16.png",
